# geirmund

./: .gitignore  Cargo.toml
.github/workflows/: cargo_fmt.yaml
master/: Cargo.toml
master/migrations/: 20250420220542_create_workers_table.sql  20250422173102_create_generation_queries_table.sql
master/src/: cli.rs  client_gateway.rs  event_bus.rs  main.rs  protobuf.rs  server.rs  state.rs  tui.rs  worker_automata.rs  worker_gateway.rs
master/src/assets/: master_ascii_art.txt
optimus/: .gitignore  Cargo.toml
optimus/src/: main.rs  message.proto  onnx.rs
packet/: Cargo.toml
packet/src/: lib.rs  tcp.rs
proto/: Cargo.toml  build.rs
proto/protobufs/: geirmund.proto
proto/src/: lib.rs  main.rs  master.rs  worker.rs
rlpg/: Cargo.toml  README.md
rlpg/src/: broadcast.rs  lib.rs  tcp.rs
worker/: Cargo.toml  README.md  build.rs
worker/llama3v2-1b/: config.json
worker/src/: cli.rs  client.rs  lib.rs  llama.rs  main.rs
worker/src/cli/: mod.rs
worker/src/handler/: mod.rs
worker/src/inference/: guard.rs  mod.rs
worker/src/inference/llama/: internal.rs  mod.rs
worker/src/tcp/: connection.rs  mod.rs
