[package]
name = "master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
proto = { path = "../proto" }
rand = "0.8.5"
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tokio-stream = "0.1.17"
