[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }
anyhow = "1.0.92"
candle-core = { version = "0.8.0" }
candle-nn = { version = "0.8.0" }
candle-transformers = { version = "0.8.0" }
derive_more = { version = "1.0.0", features = ["debug"] }
serde_json = "1.0.132"
tokenizers = "0.20.1"
tokio = { version = "1.41.0", features = ["io-std", "io-util", "macros", "net", "rt", "rt-multi-thread"] }
bytes = "1.8.0"
prost = "0.13.3"
clap = { version = "4.5.20", features = ["derive"] }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
