[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto = { path = "../proto" }
rlpg = { path = "../rlpg" }
anyhow = "1.0.92"
candle-core = { version = "0.8.0" }
candle-nn = { version = "0.8.0" }
candle-transformers = { version = "0.8.0" }
derive_more = { version = "1.0.0", features = ["debug"] }
serde_json = "1.0.132"
tokenizers = "0.20.1"
tokio = { version = "1.41.0", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
prost = "0.13.3"
clap = { version = "4.5.20", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio-util = "0.7.12"
ort = { version = "2.0.0-rc.9", features = ["cuda"] }
rand = "0.8.5"

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
